k8s/apps/taskchampion-sync-server/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskchampion-sync-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  tls:
    - secretName: tls-task-sync.lly.sh
      hosts:
        - task-sync.lly.sh
  rules:
    - host: task-sync.lly.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskchampion-sync-server
                port:
                  name: http
